<resources>

    <string name="app_name">Weather247</string>

    <string name="weather_details">Weather Details</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>

    <string name="temperature_realtime">Realtime Temperature (\u2103)</string>
    <string name="temperature_graph">Temperature Graph (\u2103)</string>
    <string name="humidity_graph">Humidity Graph (%)</string>
    <string name="pressure_graph">Pressure Graph (hPa)</string>

    <string name="last_update">Last Updated: %s, %s</string>
    <string name="date">%s\n%s</string>

    <string name="default_temperature">0\u2103</string>
    <string name="default_humidity">0%</string>
    <string name="default_pressure">0hPa</string>

    <!-- Template text -->
    <string name="temperature_text">%s\u2103</string>
    <string name="humidity_text">%s%%</string>
    <string name="pressure_text">%shPa</string>
    <string name="time_text">Time: %s</string>
    <string name="duration_text">Duration: %s minutes</string>
    <string name="data_text">Data: %s</string>

    <string name="past_weather">This week weather info</string>

    <!-- List menu in weather247 -->
    <string name="menu_duration">Duration</string>
    <string name="menu_graphic">Display graph</string>
    <string name="menu_list">Display list</string>

    <!-- List location supported  -->
    <string name="default_location">Yogyakarta, Indonesia</string>

    <!-- List weather supported  -->
    <string name="cloudy">Cloudy</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="sunny">Sunny</string>
    <string name="thunderstorm">Thunderstorm</string>

    <!-- List attributes weather supported -->
    <string name="temperature_now">Temperature %s</string>
    <string name="humidity_now">Humidity %s</string>
    <string name="pressure_now">Pressure %s</string>

    <!-- List problems -->
    <string name="result_error">Failed to load data</string>
    <string name="problem_server">Cannot getting data from server</string>

    <!-- Description image -->
    <string name="description" translatable="false">Utils image</string>
    <string name="description_1" translatable="false">Icon error</string>
    <string name="description_2" translatable="false">Progress loading</string>
    <string name="description_3" translatable="false">Icon weather</string>
    <string name="description_4" translatable="false">Attributes weather</string>
    <string name="description_5" translatable="false">Refresh</string>
</resources>
