<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/graph_margin">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/graph_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/graph_margin"
                    android:text="@string/temperature_graph"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/graph_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/graph_margin"
                    android:text="@string/pressure_graph"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartPressure"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/graph_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/graph_margin"
                    android:text="@string/humidity_graph"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>